--- a/assets/style.css
+++ b/assets/style.css
@@ -8,6 +8,7 @@
 }
 
 body {
+    font-family: sans-serif;
     font-size: 1.75rem;
     line-height: 1.75;
     display: flex;
@@ -33,7 +34,6 @@ p {
 }
 header, footer {
     height: 15vh;
-
     text-align: center;
     line-height: 15vh;
 }
@@ -64,7 +64,6 @@ pre {
     width: 30%;
     padding: 1% 2%;
     margin: 2% 0;
-    display: flex;
     flex-direction: column;
     transition: all .5s ease;
 }
